Related: tdf#152298 Consider bottom margin in remaining space calculation

The value passed to lcl_RecalcSplitLine could be too large; then
the call to rTab.Shrink succeeds, and the height of rTab changes
as requested;  but then the values of  nDistanceToUpperPrtBottom
and nDistanceToFootnoteBodyPrtBottom are negative,  resulting in
failed split and layout loop.

Change-Id: I797baee701b6a07e0c9310ea8cf902795c053642
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173595
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173705